--- a/products.html
+++ b/products.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>MI | More</title>
+	<title>MI | Product's</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="icon" href="img/xiaomi.jpg" type="image/x-icon" sizes="16x16">
 </head>
