--- a/single.html
+++ b/single.html
@@ -8,7 +8,9 @@
 <body>
 	<div class="main">
 		<div class="header">
-			<img class="logo" src="img/online-shopping.png" height="80">
+			<a href="home.html">
+				<img class="logo" src="img/online-shopping.png" height="80">
+			</a>
 			<ul class="menu">
 			  	<li><a href="home.html">Home</a></li>
 			  	<li><a href="products.html">Products</a></li>
